WIP: use a Model for pushing stream data from llm to client
